--- a/src/app/addproduct/addproduct.component.css
+++ b/src/app/addproduct/addproduct.component.css
@@ -1,20 +1,21 @@
-body{
-    background-image: url("https://steamuserimages-a.akamaihd.net/ugc/269464574501206093/D6BEAD6CD17F75F2177AC93D8C71EFC732E8066F/");
-    height:640px;
-}
 .c
   {
       width: 100%;
       height:78px;
     
   }
-  
+ 
   .b
   {
-    margin-left: 820px;
+    margin-left: 560px;
     height:40px;
     margin-top: 19px;
     background-color: #666666;
+  }
+  .l
+  {
+    background-image: url("https://steamuserimages-a.akamaihd.net/ugc/269464574501206093/D6BEAD6CD17F75F2177AC93D8C71EFC732E8066F/");
+
   }
   .p1
   {
@@ -31,9 +32,11 @@ body{
   {
       display:flex;
   }
+
   .k
   {
-      background-color:#e6e6e6;
+      margin-top:75px;
+      background-color:white;
   }
   .h
   {
@@ -45,6 +48,9 @@ body{
       margin-left: 190px;
       color:#000000;
   }
+  body{
+    background-image: url("https://steamuserimages-a.akamaihd.net/ugc/269464574501206093/D6BEAD6CD17F75F2177AC93D8C71EFC732E8066F/");
+  }
   .bg-secondaryy
   {
    background-color:#404040;
@@ -55,9 +61,4 @@ body{
     height:40px;
     margin-top: 20px;
   
-  }
-  .hg
-  {
-    margin-left:350px;
-    margin-top:100px;
   }
