--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,108 +1,72 @@
 
     <div class="bg-secondaryy c">
-		<div class="d">
+        <div class="d">
 <h4 class="mt-3 ml-3 text-light p0"><i><b>Welcome to ShoppingBee!</b></i></h4>
 
-<button type="button" class="btn btn-secondary btn-text-light ml-auto b"><i class="fa fa-plus-square" style="font-size:22px"></i>&nbsp;&nbsp;Add Product</button>
-<button type="button" class="btn btn-secondary btn-text-light n"><i class="fa fa-user-plus" aria-hidden="true" style="font-size:22px"></i>&nbsp;&nbsp;Profile</button>
+<button type="button" class="btn btn-secondary btn-text-light ml-auto b" routerLink="/home"><i class="fa fa-home" style="font-size:22px"></i>&nbsp;&nbsp;Home</button>
+<button type="button" class="btn btn-secondary btn-text-light n" routerLink="/profile"><i class="fa fa-user-plus" aria-hidden="true" style="font-size:22px"></i>&nbsp;&nbsp;Profile</button>
+<button type="button" class="btn btn-secondary btn-text-light n" routerLink="/orderhistory">&nbsp;&nbsp;Order History</button>
+<button type="button" class="btn btn-secondary btn-danger text-light p" (click)="logout()">Log Out</button>
 
-<button type="button" class="btn btn-secondary btn-danger text-light p">Log Out</button>
 </div>
 </div>
 
 
 
 
-<section class="jumbotron text-center">
-    <div class="container">
-        <h1 class="jumbotron-heading">MY SHOPPING CART</h1>
-     </div>
-</section>
+<body>
+    <div  class="bg-light">
+        <h2 style="text-align:center;padding:13px;">My Cart</h2>
+      </div>
 
-<div class="container mb-4">
+<div class="container mb-4 la">
     <div class="row">
         <div class="col-12">
             <div class="table-responsive">
-                <table class="table table-striped table-light">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th scope="col"> </th>
                             <th scope="col">Product</th>
-                        
-                            <th scope="col" class="text-center">Quantity</th>
-                            <th scope="col" class="text-right">Price</th>
+                            <th scope="col">Quantity</th>
+                            
+                            <th scope="col" >Price</th>
                             <th> </th>
                         </tr>
                     </thead>
                     <tbody>
+                        <tr *ngFor="let p of cart">
+                            <td><img src="../../assets/images/{{p.items.image}}" class="uy"> </td>
+                            <td>{{p.items.productName}}</td>
+                        
+                           <td> <button type="button"class="btn btn-outline-dark"(click)="decreaseproduct(p.items.productid)"><b><b>-</b></b></button>
+                            &nbsp;<span>{{p.quantity}}</span>
+                            &nbsp;&nbsp;<button type="button"class="btn btn-outline-dark"(click)="increaseproduct(p.items.productid)"><b><b>+</b></b></button></td>
+                            <td>{{p.items.productPrice * p.quantity}}</td>
+                            <td class="text-right"><button class="btn btn-sm btn-danger" (click)="deleteproduct(p.items.productid)"><i class="fa fa-trash"></i> </button> </td>
+                        </tr>
+                      
                         <tr>
-                            <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                            <td>Product Name Dada</td>
+                            <td></td>
+                            <td></td>
                             
-							<td> 
-								<select class="form-control">
-									<option>1</option>
-									<option>2</option>	
-									<option>3</option>	
-									<option>4</option>	
-								</select> 
-							</td>
-                            <td class="text-right">124,90 €</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
+                            <td class="text-center" ><strong>Total</strong></td>
+                            <td ><strong>{{total}}</strong></td>
                         </tr>
-                        <tr>
-                            <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                            <td>Product Name Toto</td>
-							<td> 
-									<select class="form-control">
-										<option>1</option>
-										<option>2</option>	
-										<option>3</option>	
-										<option>4</option>	
-									</select> 
-								</td>
-                            <td class="text-right">33,90 €</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
-                        </tr>
-                        <tr>
-                            <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                            <td>Product Name Titi</td>
-                           
-							<td> 
-								<select class="form-control">
-									<option>1</option>
-									<option>2</option>	
-									<option>3</option>	
-									<option>4</option>	
-								</select> 
-							</td>
-                            <td class="text-right">70,00 €</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td>
-                        </tr>
-                      <tr>
-						  <td>
-
-						  </td>
-						  <td></td>
-						  <td></td>
-						  <td class="text-right">TOTAL</td>
-						  <td class="text-right">>Rs.2445</td>
-
-					  </tr>
-					  <tr>
-							<td>
-  
-							</td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td ><button class="btn  btn-block btn-success text-uppercase">Checkout</button></td>
-  
-						</tr>
                     </tbody>
                 </table>
             </div>
         </div>
-        
+        <div class="col mb-2">
+            <div class="row">
+                    <div class="col-md-6">
+                            <button class="btn btn-block btn-light text-uppercase">Continue Shopping</button>
+                        </div>
+                <div class="col-md-6 text-right">
+                    <button class="btn btn-block btn-success text-uppercase" (click)="checkOut()">Checkout</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+</body>
