--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,19 +10,19 @@
   <nav class="navbar navbar-expand-sm k">
       <ul class="navbar-nav">
           <li class="nav-item">
-              <a class="nav-link j"  ><i class="fa fa-home" style="font-size:23px"></i>&nbsp;&nbsp;Home</a>
+              <button class=" btn btn-bg-light nav-link j"  routerLink="/main"><i class="fa fa-home" style="font-size:23px"></i>&nbsp;&nbsp;Home</button>
           </li>
           <li class="nav-item">
-                <a class="nav-link j" (click)="showCategory('Electronics')" ><i class="fa fa-television" style="font-size:23px"></i>&nbsp;&nbsp;Electronics</a>
+                <button class="btn btn-bg-light nav-link j" (click)="showCategory('Electronics')" ><i class="fa fa-television" style="font-size:23px"></i>&nbsp;&nbsp;Electronics</button>
             </li>
             <li class="nav-item">
-                    <a class="nav-link j" (click)="showCategory('Clothing')"><i class="fa fa-yelp" style="font-size:23px"></i>&nbsp;&nbsp;Clothing</a>
+                    <button class="btn btn-bg-light nav-link j" (click)="showCategory('Clothing')"><i class="fa fa-yelp" style="font-size:23px"></i>&nbsp;&nbsp;Clothing</button>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link j" (click)="showCategory('Sports')"><i class="fa fa-soccer-ball-o" style="font-size:23px"></i>&nbsp;&nbsp;Sports</a>
+                        <button class="btn btn-bg-light nav-link j" (click)="showCategory('Sports')"><i class="fa fa-soccer-ball-o" style="font-size:23px"></i>&nbsp;&nbsp;Sports</button>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link j" (click)="showCategory('Books')"><i class="fa fa-book" style="font-size:23px"></i>&nbsp;&nbsp;Books</a>
+                            <button class="btn btn-bg-light nav-link j" (click)="showCategory('Books')"><i class="fa fa-book" style="font-size:23px"></i>&nbsp;&nbsp;Books</button>
                         </li>
       </ul>
   </nav>
@@ -52,9 +52,9 @@
                 <div class="mt-3 mx-auto">
                   <img class="card-img-top image" src="../../assets/images/{{de.image}}">
                   <div class="card-body">
-                    <button class="card-title btn btn-bg-light mn" (click)= "onclick1(de.id)">{{de.productName}}</button> 
+                    <button class="card-title btn btn-bg-light mn" (click)= "onclick1(de.productid)">{{de.productName}}</button> 
                     <h6 class="lkj">Rs. {{de.productPrice}}</h6>
-                    <button type="button" class="btn btn-danger" routerLink="/cart">Add to Cart</button><br/>
+                    <button type="button" class="btn btn-danger" (click)="addProduct(de.productid)">Add to Cart</button><br/>
                   
           
                   </div>
