--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -115,6 +115,7 @@
           
           p {
             font-style: italic;
+            background-color: #666666;
           }
           
           .col-md-5 {
@@ -141,6 +142,64 @@
               width:410px;
               height:190px;
           }
+          .c
+  {
+      width: 100%;
+      height:78px;
+    
+  }
+  
+  .b
+  {
+    margin-left: 560px;
+    height:40px;
+    margin-top: 19px;
+    background-color: #666666;
+  }
+  .p1
+  {
+    background-color: #666666;  
+  }
+  .hg
+  {
+    margin-left:450px;
+  }
+  .n
+  {
+    margin-left: 10px;
+    height:40px;
+    margin-top: 20px;
+    background-color: #666666;
+  }
+  .d
+  {
+      display:flex;
+  }
+  .k
+  {
+      background-color:#e6e6e6;
+  }
+  .h
+  {
+      width: 45%;
+      margin-left: 22%
+  }
+  .j
+  {
+      margin-left: 190px;
+      color:#000000;
+  }
+  .bg-secondaryy
+  {
+   background-color:#404040;
+  }
+  .p
+  {
+    margin-left: 10px;
+    height:40px;
+    margin-top: 20px;
+  
+  }
           .iop
           {
             background-color: white;
