--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,9 +3,10 @@
             <div class="d">
 <h4 class="mt-3 ml-3 text-light p0"><i><b>Welcome to ShoppingBee!</b></i></h4>
 
-<button type="button" class="btn btn-secondary btn-text-light ml-auto b" routerLink='/login'><i class="fa fa-plus-square" style="font-size:22px"></i>&nbsp;&nbsp;Login</button>
-<button type="button" class="btn btn-secondary btn-text-light n"><i class="fa fa-user-plus" aria-hidden="true" style="font-size:22px"></i>&nbsp;&nbsp;Profile</button>
-<button type="button" class="btn btn-secondary btn-text-light n"><i class="fa fa-shopping-cart" style="font-size:22px"></i>&nbsp;&nbsp;My Cart</button>
+<button type="button" class="btn btn-secondary btn-text-light ml-auto b" (click)="log()"><i class="fa fa-sign-in" style="font-size:22px"></i>&nbsp;&nbsp;Login</button>
+<button type="button" class="btn btn-secondary btn-text-light n" routerLink="/profile"><i class="fa fa-user-plus" aria-hidden="true" style="font-size:22px"></i>&nbsp;&nbsp;About Me</button>
+<button type="button" class="btn btn-secondary btn-text-light n" routerLink="/admin"><i class="fa fa-plus-square" style="font-size:22px"></i>&nbsp;&nbsp;Add Products</button>
+<button type="button" class="btn btn-secondary btn-text-light n" (click)="cart()"><i class="fa fa-shopping-cart" style="font-size:22px"></i>&nbsp;&nbsp;My Cart</button>
 <button type="button" class="btn btn-secondary btn-danger text-light p" (click)="logout()">Log Out</button>
 </div>
 </div>
