--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -249,14 +249,9 @@ background-color:#1a1a1a;
                   <li (click)="onselect4()" class="nav-item active">
                     <a class="nav-link" href="home"> <p>Home</p> <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#"><p>About Us</p></a>
-                  </li>
-                  <li class='nav-item'>
-                    <a class="nav-link" href="#"><p>Contact Us</p></a>
-                  </li>
+                  
                   <li (click)="onselect5()" class="nav-item">
-                    <a class="nav-link" href="login "><p>Login/Register</p></a>
+                    <a class="nav-link" href="login "><p>Login</p></a>
                   </li>
                 </ul>
               </div>
